--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <h1>Actividades HLC_T3 Andrés García Clemente</h1>
     </header>
     <nav>
-    <a href="/AndresGarciaClemente_T3_A1/index.html" style="color: purple;">Actividad 1</a>
+    <a href="AndresGarciaClemente_T3_A1/index.html" target="_blank" style="color: purple;">Actividad 1</a><br><br>
+    <a href="AndresGarciaClemente_T3_A2/index.html" target="_blank" style="color: purple;">Actividad 2</a><br><br>
     </nav>
 </body>
 </html>
