--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <nav>
     <a href="AndresGarciaClemente_T3_A1/index.html" target="_blank" style="color: purple;">Actividad 1</a><br><br>
     <a href="AndresGarciaClemente_T3_A2/index.html" target="_blank" style="color: purple;">Actividad 2</a><br><br>
+    <a href="AndresGarciaClemente_T3_A3/index.html" target="_blank" style="color: purple;">Actividad 3</a><br><br>
     </nav>
 </body>
 </html>
